Fixed heading hierarchy and changed some dark / light mode colors to remove some high contrast

--- a/src/components/aboutme/AboutMe.module.scss
+++ b/src/components/aboutme/AboutMe.module.scss
@@ -92,7 +92,7 @@
     }
   }
 
-  h4 {
+  h2 {
     text-transform: uppercase;
     color: var(--section-header-color);
     font-size: $section-headings-size;
